<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorry_crash"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_restart"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/restart" />

            <Button
                android:id="@+id/btn_restart_no_wifi"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/restart_no_wifi" />

            <Button
                android:id="@+id/btn_restart_no_cache"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/restart_clear_cache" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_crash_log"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>