<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loading"
    android:layout_width="@dimen/alert_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/custom_image"
        android:layout_width="@dimen/dialog_drawable_frame_width_height"
        android:layout_height="@dimen/dialog_drawable_frame_width_height"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/error_frame"
        android:layout_width="@dimen/dialog_drawable_frame_width_height"
        android:layout_height="@dimen/dialog_drawable_frame_width_height"
        android:layout_marginTop="5dp"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/error_circle" />

        <ImageView
            android:id="@+id/error_x"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/error_center_x" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/success_frame"
        android:layout_width="@dimen/dialog_drawable_frame_width_height"
        android:layout_height="@dimen/dialog_drawable_frame_width_height"
        android:layout_marginTop="5dp"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/success_bow" />

        <View
            android:id="@+id/mask_right"
            android:layout_width="35dp"
            android:layout_height="80dp"
            android:layout_gravity="right"
            android:layout_marginTop="-13dp"
            android:background="@android:color/white" />

        <View
            android:id="@+id/mask_left"
            android:layout_width="21dp"
            android:layout_height="60dp"
            android:layout_gravity="left"
            android:layout_marginLeft="-3dp"
            android:background="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/success_circle" />

        <joe.frame.dialog.SuccessTickView
            android:id="@+id/success_tick"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/warning_frame"
        android:layout_width="@dimen/dialog_drawable_frame_width_height"
        android:layout_height="@dimen/dialog_drawable_frame_width_height"
        android:layout_marginTop="5dp"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/warning_circle" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/warning_sigh" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/progress_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="9dp"
        android:orientation="vertical"
        android:visibility="gone">

        <joe.frame.view.progresswheel.ProgressWheel
            android:id="@+id/progressWheel"
            android:layout_width="@dimen/progress_wheel_width_height"
            android:layout_height="@dimen/progress_wheel_width_height"
            android:layout_gravity="center"
            wheel:matProg_progressIndeterminate="true" />
    </FrameLayout>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:text="@string/dialog_default_title"
        android:textColor="#575757"
        android:textSize="@dimen/dialog_title_textSize" />

    <TextView
        android:id="@+id/content_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:maxLines="8"
        android:scrollbars="vertical"
        android:textAlignment="center"
        android:textColor="#797979"
        android:textSize="@dimen/dialog_content_textSize"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/other_button"
            style="@style/dialog_blue_button"
            android:layout_marginRight="10dp"
            android:background="@drawable/gray_button_background"
            android:text="@string/dialog_other"
            android:visibility="gone" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/dialog_blue_button"
            android:layout_marginRight="10dp"
            android:background="@drawable/gray_button_background"
            android:text="@string/dialog_cancel"
            android:visibility="gone" />

        <Button
            android:id="@+id/confirm_button"
            style="@style/dialog_blue_button"
            android:text="@string/dialog_ok" />
    </LinearLayout>
</LinearLayout>